@@ -9,8 +9,8 @@
 
 namespace Mercator {
 
-Surface::Surface(Segment & seg, const Shader & sh, bool color, bool alpha) :
-    Buffer<ColorT>(seg, (color ? 3 : 0) + (alpha ? 1 : 0)), m_shader(sh)
+Surface::Surface(const Segment & seg, const Shader & sh, bool color, bool alpha)
+  : Buffer<ColorT>(seg, (color ? 3 : 0) + (alpha ? 1 : 0)), m_shader(sh)
 {
 }
 
